--- a/index.html
+++ b/index.html
@@ -1,1 +1,149 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic Training on Estcon Trading Business</title>
+    <style>
+        /* Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
+        /* Body Styling */
+        body {
+            background-color: #f8f9fa;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
+        }
+
+        /* Container Styling */
+        .container {
+            max-width: 600px;
+            width: 100%;
+            background-color: #ffffff;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        /* Header Styling */
+        h1 {
+            font-size: 24px;
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        p.subtitle {
+            color: #666;
+            margin-bottom: 20px;
+        }
+
+        /* List Styling */
+        ul {
+            list-style: none;
+            margin-bottom: 20px;
+        }
+
+        ul li {
+            margin: 10px 0;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #f7f7f7;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        /* Audio Player Styling */
+        audio {
+            width: 100%;
+            outline: none;
+        }
+
+        /* CTA Styling */
+        .cta-text {
+            font-size: 16px;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        .cta-button {
+            display: inline-block;
+            padding: 15px 25px;
+            font-size: 16px;
+            font-weight: bold;
+            color: #fff;
+            background-color: #007bff;
+            border: none;
+            border-radius: 8px;
+            text-decoration: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .cta-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <h1>Basic Training on Estcon Trading Business</h1>
+        <p class="subtitle">Presented by Sir Christopher Obinna</p>
+        <p>Listen to these Presentations Below 👇</p>
+        
+        <ul>
+            <li>
+                <span>1. What is ESTCON TRADING</span>
+                <audio controls>
+                    <source src="audio/what-is-estcon-trading.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </li>
+            <li>
+                <span>2. How Does ESTCON TRADING BUSINESS Work</span>
+                <audio controls>
+                    <source src="audio/how-does-estcon-work.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </li>
+            <li>
+                <span>3. Why Should You BUY ESTCON</span>
+                <audio controls>
+                    <source src="audio/why-buy-estcon.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </li>
+            <li>
+                <span>4. STEP BY STEP PROCESS to EARN Daily Income through ESTCON TRADING</span>
+                <audio controls>
+                    <source src="audio/earn-daily-income.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </li>
+            <li>
+                <span>5. BILLIONAIRE ESTATORS NATION LIMITED</span>
+                <audio controls>
+                    <source src="audio/billionaire-estators-nation.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </li>
+        </ul>
+
+        <p class="cta-text">For More Information and Questions, then</p>
+        <a href="#join" class="cta-button">Join Billionaire Estators Nation Limited</a>
+    </div>
+
+</body>
+</html>
