--- a/index.html
+++ b/index.html
@@ -107,35 +107,35 @@
             <li>
                 <span>1. What is ESTCON TRADING</span>
                 <audio controls>
-                    <source src="audio/what-is-estcon-trading.mp3" type="audio/mp3">
+                    <source src="Estcon11.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </li>
             <li>
                 <span>2. How Does ESTCON TRADING BUSINESS Work</span>
                 <audio controls>
-                    <source src="audio/how-does-estcon-work.mp3" type="audio/mp3">
+                    <source src="Estcon22.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </li>
             <li>
                 <span>3. Why Should You BUY ESTCON</span>
                 <audio controls>
-                    <source src="audio/why-buy-estcon.mp3" type="audio/mp3">
+                    <source src="Estcon33.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </li>
             <li>
                 <span>4. STEP BY STEP PROCESS to EARN Daily Income through ESTCON TRADING</span>
                 <audio controls>
-                    <source src="audio/earn-daily-income.mp3" type="audio/mp3">
+                    <source src="Estcon44.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </li>
             <li>
                 <span>5. BILLIONAIRE ESTATORS NATION LIMITED</span>
                 <audio controls>
-                    <source src="audio/billionaire-estators-nation.mp3" type="audio/mp3">
+                    <source src="Estcon55.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </li>
