--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </audio>
             </li>
             <li>
-                <span>2. How Does ESTCON TRADING BUSINESS Work</span>
+                <span>2. How Does ESTCON TRADING Work</span>
                 <audio controls>
                     <source src="Estcon22.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
@@ -126,7 +126,7 @@
                 </audio>
             </li>
             <li>
-                <span>4. STEP BY STEP PROCESS to EARN Daily Income through ESTCON TRADING</span>
+                <span>4. EARN Daily Income in ESTCON TRADING</span>
                 <audio controls>
                     <source src="Estcon44.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
