--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </ul>
 
         <p class="cta-text">For More Information and Questions, then</p>
-        <a href="#join" class="cta-button">Join Billionaire Estators Nation Limited</a>
+        <a href="https://wa.link/yga0tw" class="cta-button">Join Billionaire Estators Nation Limited</a>
     </div>
 
 </body>
