--- a/index.html
+++ b/index.html
@@ -105,27 +105,27 @@
         
         <ul>
             <li>
-                <span>1. What is ESTCON TRADING</span>
+                <span>PHASE 1</span>
                 <audio controls>
-                    <source src="Estcon11.mp3" type="audio/mp3">
+                    <source src="Estcon111.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </li>
             <li>
-                <span>2. How Does ESTCON TRADING Work</span>
+                <span>PHASE 2</span>
                 <audio controls>
-                    <source src="Estcon22.mp3" type="audio/mp3">
+                    <source src="Estcon222.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </li>
             <li>
-                <span>3. Why Should You BUY ESTCON</span>
+                <span>PHASE 3</span>
                 <audio controls>
-                    <source src="Estcon33.mp3" type="audio/mp3">
+                    <source src="Estcon333.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </li>
-            <li>
+          <!--  <li>
                 <span>4. EARN Daily Income in ESTCON TRADING</span>
                 <audio controls>
                     <source src="Estcon44.mp3" type="audio/mp3">
@@ -138,7 +138,7 @@
                     <source src="Estcon55.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
-            </li>
+            </li> -->
         </ul>
 
         <p class="cta-text">For More Information and Questions, then</p>
